# jesse-wasm-jit

./: CMakeLists.txt  main.cpp
src/: Backend.cpp  Backend.hpp  BinaryIrReader.cpp  BinaryIrReader.hpp  ExecutableInstruction.hpp  Frontend.cpp  Frontend.hpp  WasmBinary.hpp
test/: CMakeLists.txt  e2e.cpp
test/wasm/: addTwo.wasm  addTwo.wat  cprintf.wasm  cprintf.wat  jPrintf.wasm  jPrintf.wat
